# omniSynq

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  __main__.py  config.py
backend/core/: __init__.py  app.py
backend/core/routes/: __init__.py
backend/core/routes/v1/: __init__.py  business.py  churn_predictor.py  fileupload.py  gateway.py  user.py
backend/data/static/: build.sql
backend/db/: db.py
backend/models/: models.py
backend/templates/: verification.html
backend/utils/: __init__.py  auth.py  email.py
backend/utils/db/: postgresql.py
